# hyprland_scripts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hypr_kitty_nav.py  kitty_launch.py  pomodoro.py  pyproject.toml  waybar_docker_status.py  waybar_gh_notifications.py
docs/: README.md  gh_notifications.md  hypr_kitty_nav.md  kitty_launch.md  pomodoro.md  run_or_focus.md  waybar_docker_status.md
pomodoro/: pomodoro-menu.xml  pomodoro.py
run_or_focus/: run_or_focus.py  run_or_focus_hyprpy.py
